--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,19 @@
         android:id="@+id/navigation_home"
         android:name="com.pshetye.apimodeler.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
-
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_usgsEarthquakes"
+            app:destination="@id/usgsEarthquakes"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.pshetye.apimodeler.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/usgsEarthquakes"
+        android:name="com.pshetye.usgs.ui.fragments.UsgsEarthquakes"
+        app:moduleName="usgs"
+        android:label="UsgsEarthquakes"
+        tools:layout="@layout/usgs_earthquakes_fragment">
+    </fragment>
 
-    <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.pshetye.apimodeler.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
 </navigation>
