--- a/usgs/src/main/res/layout/usgs_earthquakes_fragment.xml
+++ b/usgs/src/main/res/layout/usgs_earthquakes_fragment.xml
@@ -5,9 +5,12 @@
     android:layout_height="match_parent"
     tools:context="com.pshetye.usgs.ui.fragments.UsgsEarthquakes">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/earthquakes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp" />
 
 </FrameLayout>
