--- a/usgs/src/main/res/layout/single_earthquake.xml
+++ b/usgs/src/main/res/layout/single_earthquake.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="8dp">
 
     <TextView
         android:id="@+id/earthquake_place"
@@ -14,10 +17,9 @@
         android:layout_marginBottom="8dp"
         android:textStyle="italic|bold"
         android:textSize="@dimen/item_module_text_size"
-        android:background="@android:color/darker_gray"
         tools:text="USGS Earthquakes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
