--- a/usgs/src/main/res/layout/usgs_earthquakes_fragment.xml
+++ b/usgs/src/main/res/layout/usgs_earthquakes_fragment.xml
@@ -8,9 +8,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/earthquakes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
