--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
 
     <dimen name="item_module_padding">16dp</dimen>
     <dimen name="item_module_text_size">24sp</dimen>
+
+    <dimen name="item_total_text_size">20sp</dimen>
 </resources>
