--- a/usgs/src/main/res/layout/usgs_earthquakes_fragment.xml
+++ b/usgs/src/main/res/layout/usgs_earthquakes_fragment.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/refresher"
     tools:context="com.pshetye.usgs.ui.fragments.UsgsEarthquakes">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -10,4 +12,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</FrameLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
