--- a/usgs/src/main/res/layout/single_earthquake.xml
+++ b/usgs/src/main/res/layout/single_earthquake.xml
@@ -9,17 +9,34 @@
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp">
 
-    <TextView
-        android:id="@+id/earthquake_place"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/item_module_padding"
-        android:layout_marginBottom="8dp"
-        android:textStyle="italic|bold"
-        android:textSize="@dimen/item_module_text_size"
-        tools:text="USGS Earthquakes"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/earthquake_place"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/item_eq_location_padding"
+            android:textStyle="italic|bold"
+            android:textSize="@dimen/item_module_text_size"
+            tools:text="USGS Earthquakes"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/intensity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_margin="4dp"
+            android:textStyle="italic|bold"
+            android:paddingBottom="@dimen/item_eq_intensity_padding"
+            android:paddingStart="@dimen/item_eq_intensity_padding"
+            android:paddingEnd="@dimen/item_eq_intensity_padding"
+            tools:text="@string/eq_intensity" />
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
