--- a/app/src/main/res/layout/module_entry_point.xml
+++ b/app/src/main/res/layout/module_entry_point.xml
@@ -9,17 +9,30 @@
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp">
 
-    <TextView
-        android:id="@+id/module_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/item_module_padding"
-        android:layout_marginBottom="8dp"
-        android:textStyle="italic|bold"
-        android:textSize="@dimen/item_module_text_size"
-        tools:text="USGS Earthquakes"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/module_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/item_module_padding"
+            android:layout_marginBottom="8dp"
+            android:textStyle="italic|bold"
+            android:textSize="@dimen/item_module_text_size"
+            tools:text="USGS Earthquakes" />
+
+        <TextView
+            android:id="@+id/api_source"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:paddingStart="@dimen/item_module_api_padding"
+            android:paddingBottom="@dimen/item_module_api_padding"
+            android:paddingEnd="@dimen/item_module_api_padding"
+            tools:text="http://something"/>
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
