--- a/usgs/src/main/res/layout/single_earthquake.xml
+++ b/usgs/src/main/res/layout/single_earthquake.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/item_eq_location_padding"
-            android:textStyle="italic|bold"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
             android:textSize="@dimen/item_module_text_size"
             tools:text="USGS Earthquakes"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:layout_margin="4dp"
-            android:textStyle="italic|bold"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             android:paddingBottom="@dimen/item_eq_intensity_padding"
             android:paddingStart="@dimen/item_eq_intensity_padding"
             android:paddingEnd="@dimen/item_eq_intensity_padding"
