--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="item_module_text_size">24sp</dimen>
 
     <dimen name="item_total_text_size">20sp</dimen>
+    <dimen name="item_small_text_size">8sp</dimen>
 </resources>
